--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -28,6 +28,10 @@ GRANDES TELAS: ACIMA DE 1200PX
         width: 70%;
         float: right;
     }
+
+    div#formulario > p {
+        font-size: 1.1em;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -42,11 +46,19 @@ GRANDES TELAS: ACIMA DE 1200PX
     section#login > div#imagem {
         width: 50%;
         height: 100%;
-        float: left;
+        float: right;
     }
 
     section#login > div#formulario {
         width: 50%;
         float: right;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
